# BlastBeats

./: .gitignore  .gitmodules  BlastBeats.sln  CMakeLists.txt  CmakePresets.json  README.md  TODO.md  install-taglib.ps1  vcpkg.json
BlastBeats/: AppState.cpp  AppState.h  BlastBeats.vcxproj  BlastBeats.vcxproj.filters  MusicDirectories.cpp  MusicDirectories.h  MusicPlayer.cpp  MusicPlayer.h  Observers.h  Songs.cpp  Songs.h
BlastBeats.Application/: BlastBeats.Application.vcxproj
BlastBeats.Core/: AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  CMakeLists.txt  Helpers.h  Messages.h  MusicDirectories.cpp  MusicDirectories.h  MusicPlayer.cpp  MusicPlayer.h  Observers.h  SongQueue.cpp  SongQueue.h  Songs.cpp  Songs.h
BlastBeats.GUI/: BlastBeats.GUI.vcxproj  BlastBeats.GUI.vcxproj.filters  GuiState.cpp  GuiState.h  MainGui.cpp  MainGui.h  MusicDirectoryGui.cpp  MusicDirectoryGui.h  MusicPlayerGui.cpp  MusicPlayerGui.h  SongsTable.cpp  SongsTable.h  WindowsHelpers.h  imgui.ini  main.cpp
BlastBeats.Gui.Components/: CMakeLists.txt  Helpers.h  MusicDirectoryGui.cpp  MusicDirectoryGui.h  MusicPlayerGui.cpp  MusicPlayerGui.h  SongQueueGui.cpp  SongQueueGui.h  SongsTable.cpp  SongsTable.h
BlastBeats.Gui.Core/: BlastBeats.Gui.Core.vcxproj  BlastBeats.Gui.Core.vcxproj.filters  CMakeLists.txt  GuiState.cpp  GuiState.h
BlastBeats.Windows/: CMakeLists.txt  MainGui.cpp  MainGui.h  WindowsCallbacks.cpp  WindowsCallbacks.h  main.cpp
